[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/img/backgrounds/memorybg.png" type="Texture" id=1]
[ext_resource path="res://scenes/fish/HeartScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/shaders/sinbob.gdshader" type="Shader" id=3]
[ext_resource path="res://scenes/fish/FishMemoryScene.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/2DPointer.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/helper/2DPickable.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/img/backgrounds/background-1.2.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 150.496, 203.844 )

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/amount = 6.0
shader_param/uvAmount = 0.2

[node name="FishMemoryScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 7, 22 )
scale = Vector2( 0.182729, 0.0735858 )
texture = ExtResource( 7 )

[node name="2DPickable2" parent="Sprite2" instance=ExtResource( 6 )]
position = Vector2( 207.958, 13.5896 )

[node name="CollisionShape2D" parent="Sprite2/2DPickable2" index="0"]
position = Vector2( -2.7363, 3.05176e-05 )
shape = SubResource( 4 )

[node name="BallSprite" parent="." instance=ExtResource( 2 )]
material = SubResource( 5 )

[node name="2DPointer" parent="." instance=ExtResource( 5 )]
position = Vector2( 406, 249 )

[connection signal="picked" from="Sprite2/2DPickable2" to="." method="_on_2DPickable2_picked"]
[connection signal="heart_warmed" from="BallSprite" to="." method="_on_BallSprite_heart_warmed"]

[editable path="Sprite2/2DPickable2"]
